--- a/docs/styles.css
+++ b/docs/styles.css
@@ -50,6 +50,51 @@ figure > figcaption {
   color: #F1B82D;
   }
   
+
+
+/* Navbar - MOBILE ONLY */
+
+@media (max-width: 991.98px) {
+  
+  .navbar {
+      padding-left: 0 !important;
+	    padding-right: 0 !important;
+    }
+  
+  /* Social media icons */
+  ul.navbar-nav:nth-child(1) .nav-link {
+    font-size: 1.1rem;
+      }
+      
+      .aa-SubmitIcon {
+        width: 26px;
+        height: 26px;
+        margin-top: -0.1em;
+      }
+      
+    ul.navbar-nav:nth-child(1) {
+    flex-direction: column;
+    padding: 10px 20px;
+    margin: auto;
+    flex-wrap: wrap;
+    justify-content: right;
+    text-align: center;
+    }
+    
+    .navbar-container {
+      flex-direction: row-reverse;
+    }
+      
+    .navbar-brand-container {
+      max-width: 100%;
+    }
+  
+    .quarto-navbar-tools {
+      display: none !important;
+    } 
+}
+
+  
 /* SIDEBAR */
 .sidebar-item .sidebar-item-container {
   color: indianred;
@@ -65,6 +110,27 @@ figure > figcaption {
   box-shadow: 0 0 5px lightgray;
 }
 
+@media (max-width: 991.98px) {
+  #quarto-sidebar .sidebar-menu-container {
+    white-space: revert !important;
+  }
+}
+
+/* FOOTER */
+
+.nav-footer {
+  padding-top: 20px;
+}
 
 
+@media (max-width: 1000px) {
+  
 
+.nav-footer {
+  flex-direction: column-reverse;
+  align-items: center;
+  padding-top: 2em;
+  padding-bottom: 2em;
+}
+  
+}
