Adding aspect ratio to slides.

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -29,7 +29,7 @@ figure > figcaption {
 .slide-deck {
   border: 3px solid #dee2e6;
   width: 100%;
-  height: 475px;
+  aspect-ratio: 16 / 9;
 }
 
 /* NAVBAR */
